Device registration APIS implemented
