# src/models/devices/RegisteredDevices.js
@@ -1,0 +1,41 @@
+module.exports = function (sequelize, DataTypes) {
+  return sequelize.define(
+    "RegisteredDevices",
+    {
+      id_registered_devices: {
+        autoIncrement: true,
+        type: DataTypes.BIGINT,
+        allowNull: false,
+        primaryKey: true,
+      },
+      device_id: {
+        type: DataTypes.STRING,
+        unique: true,
+      },
+      account_id: {
+        type: DataTypes.INTEGER,
+        allowNull: false,
+      },
+      created_at: {
+        type: DataTypes.DATE,
+        allowNull: false,
+        defaultValue: sequelize.literal("CURRENT_TIMESTAMP"),
+      },
+      updated_at: {
+        type: DataTypes.DATE,
+        allowNull: false,
+        defaultValue: sequelize.literal("CURRENT_TIMESTAMP"),
+      },
+      is_deleted: {
+        type: DataTypes.INTEGER,
+        allowNull: false,
+        defaultValue: 0,
+      },
+    },
+    {
+      sequelize,
+      tableName: "registered_devices",
+      timestamps: false,
+    }
+  );
+};
